# haskell-jsend

./: .project  README.md  jsend.cabal
examples/: Encode.hs  Parse.hs
src/Data/: JSend.hs
